# weather-data-engineering-project

./: .env  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
src/: .cache.sqlite  extraction.py  tranform.py
